[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-http = "3.6.0"
actix-web = "4.5.1"
actix-session = "0.9.0"
actix-files = "0.6.5"
chrono = "0.4.38"
log = "0.4.21"
sqlx = "0.7.4"